# vrf

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: vrf.rs
examples/: blinding.rs  vrf.rs
src/: lib.rs  point.rs  scalar.rs
