[package]
name = "vrf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "4.0.0-rc.2"
digest = "0.10.7"
rand_core = "0.6.4"

[dev-dependencies]
bincode = "1.3.3"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.5"
sha2 = "0.10.6"
